# subtrans

./: README.md  pyproject.toml  pyrightconfig.json  requirements.txt  subtrans.py
